--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -6,24 +6,23 @@
   <div class="container">
     <div class="product-detail">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-6">
           <div class="product-image">
             <img src="img/cookies.jpg" alt="" class="img-responsive">
           </div>
         </div>
 
-        <div class="col-md-7">
+        <div class="col-md-6">
           <div class="row">
-            <div class="col-md-8">
-              <h3 class="text-uppercase font-semibold inline-block">Baked Potato Chips</h3>
-              <span class="text-center font-semibold brand-primary inline-block prd-price"><i class="fa fa-inr"></i> 225</span>
+            <div class="col-md-10">
+              <h3 class="text-uppercase font-semibold">Baked Potato Chips <span class="text-center font-semibold brand-primary prd-price"><i class="fa fa-inr"></i> 225</span></h3>
               <div class="prd-descp">
-                <div class="product-price">
-                  <p class="brand-primary font-semibold">Net Weight: 100 gms</p>
+                <div class="product-price inline-block">
+                  <p class="font-semibold">Net Weight: 100 gms</p>
                 </div>
-                <form action="">
+                <form action="" class="inline-block">
                   <div class="form-group relate">
-                    <label for="quan">Quantity:</label>
+                    <label for="quan" class="font-semibold">Quantity :</label>
                     <select class="form-control" id="quan">
                       <option>01</option>
                       <option>02</option>
@@ -40,25 +39,28 @@
               </div>
             </div>
           </div>
-          <tabset>
-            <tab>
-              <tab-heading>
-                <span class="text-uppercase font-semibold">About</span>
-              </tab-heading>
-              <div class="inner-product-detail">
-                <p class="white">Love eating potato chips and don’t know how to deal with the craving? The world may say a resounding no to potato chips, but there is no need to be in denial. Here are baked potato-crisps that allow you to savor your favorite comfort food and do it without guilt.</p>
-                <p class="white">Reduced calories, crunchy and almost totally free of oil, try our baked potato chips that are sheer pleasure, especially with a tangy salsa or a smooth curd dip.</p>
-                <span class="white"><sup>*</sup>Gluten Free</span>
-                <br>
-                <span class="white"><sup>*</sup>Low Fat</span>
-              </div>
-            </tab>
-            <tab>
-              <tab-heading>
-                <span class="text-uppercase font-semibold">Nutritional Value</span>
-              </tab-heading>
-            </tab>
-          </tabset>
+          <div class="product-tab-detail">
+            <tabset>
+              <tab>
+                <tab-heading>
+                  <span class="text-uppercase font-semibold">About</span>
+                </tab-heading>
+                <div class="inner-product-detail">
+                  <p class="">Love eating potato chips and don’t know how to deal with the craving? The world may say a resounding no to potato chips, but there is no need to be in denial. Here are baked potato-crisps that allow you to savor your favorite comfort food and do it without guilt.</p>
+                  <p class="">Reduced calories, crunchy and almost totally free of oil, try our baked potato chips that are sheer pleasure, especially with a tangy salsa or a smooth curd dip.</p>
+                  <span class=""><sup>*</sup>Gluten Free</span>
+                  <br>
+                  <span class=""><sup>*</sup>Low Fat</span>
+                </div>
+              </tab>
+              <tab>
+                <tab-heading>
+                  <span class="text-uppercase font-semibold">Nutritional Value</span>
+                </tab-heading>
+                <div class="inner-product-detail"></div>
+              </tab>
+            </tabset>
+          </div>
         </div>
       </div>
     </div>
