--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -73,7 +73,7 @@
       <uib-carousel>
         <uib-slide ng-repeat="likes in like">
           <div class="row">
-            <div class="col-md-4" ng-repeat="likepro in likes">
+            <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="likepro in likes">
               <div class="inner-like text-center">
                 <div class="like-image round">
                   <img ng-src="{{likepro.image}}" alt="" class="img-responsive" />
