--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -20,7 +20,7 @@
           <div class="col-md-5 col-sm-12">
             <div class="embed-youtube">
               <!-- Youtube video -->
-              <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-md-7 col-sm-12">
