--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container">
-    <div class="consult-detail get-up brand-brown-bg white rel">
+    <div class="consult-detail get-up brand-brown-bg white rel health-descp">
       <p>An AICI consultant, Tina is a PersonalImage consultant, Corporate Speaker and Personal Stylist.She has a masters degree in Luxury Marketing and Management fom France. She has practiced her image and Grooming skills in the luxury industry in fashion across the globe in France, Germany, China and Hong Kong.</p>
       <p>Tina hopes to empower people by teaching them the power of Image and Personal Branding.</p>
       <p>Her personal styling services caters to clients at all ages from 14 years onwards men, women and younger girls. Her services involve personal styling for men and women, bridal and trousseau services as well as corporate image management.</p>
