--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -225,6 +225,7 @@
     }
   }
   .product-also-like {
+    h3 { font-size: 24px; }
     .inner-like {
       .like-image { @include square(180px); }
     }
@@ -611,6 +612,11 @@
     }
   }
   .product-also-like {
+    margin: 40px 0 70px;
+    h3 {
+      margin: 0 0 15px;
+      font-size: 20px;
+    }
     .inner-like {
       .like-image { @include square(150px); }
       span {
@@ -1125,15 +1131,17 @@
   }
   // product-detail
   .product-also-like {
+    margin: 40px 0 60px;
+    h3 { font-size: 18px; }
     .inner-like {
-      .like-image { @include square(100px); }
+      .like-image { @include square(90px); }
       span {
-        margin: 12px 0 0;
-        font-size: 14px;
+        margin: 10px 0 0;
+        font-size: 13px;
       }
     }
-     .glyphicon-chevron-right:before { zoom: 0.7; }
-     .glyphicon-chevron-left:before { zoom: 0.7; }
+     .glyphicon-chevron-right:before { zoom: 0.6; }
+     .glyphicon-chevron-left:before { zoom: 0.6; }
   }
 }
 @media (max-width: 480px) {
@@ -1596,5 +1604,17 @@
       font-size: 14px;
     }
     form { margin: 0; }
+  }
+  .product-also-like {
+    margin: 30px 0 40px;
+    .inner-like {
+      .like-image { @include square(65px); }
+      span {
+        margin: 10px 0 0;
+        font-size: 10px;
+      }
+    }
+     .glyphicon-chevron-right:before { zoom: 0.5; }
+     .glyphicon-chevron-left:before { zoom: 0.5; }
   }
 }
