--- a/views/content/home.html
+++ b/views/content/home.html
@@ -244,14 +244,16 @@
           </div>
           <h4 class="tips">Ask and get an answer on the healthiest food tips</h4>
           <form action="">
-            <div class="form-group relate">
-              <select name="" id="" class="form-control text-bold">
-                <option value="">Choose a Category</option>
-                <option value="">Category 1</option>
-                <option value="">Category 2</option>
-                <option value="">Category 3</option>
-              </select>
-              <span class="caret white"></span>
+            <div class="form-group">
+              <div class="custom-select">
+                <select name="" id="" class="form-control text-bold">
+                  <option value="">Choose a Category</option>
+                  <option value="">Category 1</option>
+                  <option value="">Category 2</option>
+                  <option value="">Category 3</option>
+                </select>
+              </div>
+              <!-- <span class="caret white"></span> -->
             </div>
             <div class="row">
               <div class="col-md-6">
