--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -64,8 +64,8 @@
             </div>
             <div class="col-md-6">
               <div class="text-right cart-btn">
-                <a href="" class="btn btn-primary text-uppercase continue">Continue Shopping</a>
-                <a href="" class="btn btn-primary text-uppercase">Proceed to checkout</a>
+                <a href="#/healthproducts" class="btn btn-primary text-uppercase continue">Continue Shopping</a>
+                <a href="#/checkout" class="btn btn-primary text-uppercase">Proceed to checkout</a>
               </div>
             </div>
           </div>
