--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -98,7 +98,7 @@
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -111,7 +111,7 @@
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -124,7 +124,7 @@
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -137,7 +137,7 @@
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -150,7 +150,7 @@
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -163,7 +163,7 @@
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -176,7 +176,7 @@
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -189,7 +189,7 @@
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -202,7 +202,7 @@
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -214,7 +214,7 @@
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -227,7 +227,7 @@
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
@@ -240,7 +240,7 @@
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
-                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="#/cart" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
