--- a/views/content/home.html
+++ b/views/content/home.html
@@ -252,6 +252,7 @@
                   <option value="">Category 2</option>
                   <option value="">Category 3</option>
                 </select>
+                <span class="select-caret"></span>
               </div>
               <!-- <span class="caret white"></span> -->
             </div>
