--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -23,13 +23,15 @@
                 <form action="" class="inline-block">
                   <div class="form-group relate">
                     <label for="quan" class="font-semibold">Quantity :</label>
+                    <div class="custom-select inline-block">
                     <select class="form-control" id="quan">
                       <option>01</option>
                       <option>02</option>
                       <option>03</option>
                       <option>04</option>
                     </select>
-                    <span><i class="fa fa-caret-down"></i></span>
+                    <span class="select-caret"></span>
+                    </div>
                   </div>
                 </form>
               </div>
